<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.lrmk.newttcalendar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.lrmk.newttcalendar.ui.dashboard.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.lrmk.newttcalendar.ui.notifications.TeachersFragment"
        android:label="@string/title_teachers"
        tools:layout="@layout/fragment_teachers" />
</navigation>